apps/prod/hello/api/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-api
  labels:
    app.kubernetes.io/name: hello-api
    app.kubernetes.io/part-of: hello
    talay.io/environment: prod
spec:
  ingressClassName: traefik
  tls:
    - secretName: hello-api-tls
      hosts:
        - api.hello.cantalay.com
  rules:
    - host: api.hello.cantalay.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-api
                port:
                  number: 80
